--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <ul>
                             <li><a href="HelloWorld.html">New</a></li>
                             <li><a href="#"></a></li>
-                            <li><a href="#">Explore</a></li>
+                            <li><a href="index2.html">Explore</a></li>
                             <li><a href="#"></a></li>
                         </ul>
                       </div>
